src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Hotel_Only_Invoice_Style__c</fullName>
        <description>The rate the insurance company is invoiced for Hotel Only placements.</description>
        <label>Hotel Only Invoice Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Highest Daily Rate</fullName>
                </value>
                <value>
                    <fullName>Hotel Portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Rule__c</fullName>
        <description>List of available rules for hotel placements with a contracted insurance provider.</description>
        <label>Hotel Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bakerloo</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Jubilee</fullName>
                </value>
                <value>
                    <fullName>Piccadilly</fullName>
                </value>
                <value>
                    <fullName>Victoria</fullName>
                </value>
                <value>
                    <fullName>Metropolitan</fullName>
                </value>
                <value>
                    <fullName>White City</fullName>
                </value>
                <value>
                    <fullName>Oxford Circus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_into_Housing_Invoice_Style__c</fullName>
        <description>The rate the insurance company is invoiced for Hotel into Housing placements.</description>
        <label>Hotel into Housing Invoice Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Highest Daily Rate</fullName>
                </value>
                <value>
                    <fullName>Hotel Portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Invoice_Frequency__c</fullName>
        <label>Housing Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire Amount</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Invoice_Style__c</fullName>
        <inlineHelpText>Select Markup Invoice if the contract should have a separate invoice for markup.</inlineHelpText>
        <label>Housing Invoice Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Invoice</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Markup Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Rule__c</fullName>
        <description>List of available rules for housing placements with a contracted insurance provider.</description>
        <label>Housing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allstate</fullName>
                </value>
                <value>
                    <fullName>American Reliable</fullName>
                </value>
                <value>
                    <fullName>Assurant Lending Solutions</fullName>
                </value>
                <value>
                    <fullName>Baker Street</fullName>
                </value>
                <value>
                    <fullName>Bond Street</fullName>
                </value>
                <value>
                    <fullName>Camden Road</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>East London</fullName>
                </value>
                <value>
                    <fullName>Greenford</fullName>
                </value>
                <value>
                    <fullName>Hanger Lane</fullName>
                </value>
                <value>
                    <fullName>Harleysville</fullName>
                </value>
                <value>
                    <fullName>Holland Park</fullName>
                </value>
                <value>
                    <fullName>Homesite</fullName>
                </value>
                <value>
                    <fullName>IAS</fullName>
                </value>
                <value>
                    <fullName>ISAC/Universal</fullName>
                </value>
                <value>
                    <fullName>Lancaster Gate</fullName>
                </value>
                <value>
                    <fullName>Marble Arch</fullName>
                </value>
                <value>
                    <fullName>Narragansett Bay</fullName>
                </value>
                <value>
                    <fullName>North Acton</fullName>
                </value>
                <value>
                    <fullName>Northern</fullName>
                </value>
                <value>
                    <fullName>Tower Hill Insurance Group</fullName>
                </value>
                <value>
                    <fullName>West Acton</fullName>
                </value>
                <value>
                    <fullName>QBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <inlineHelpText>Frequency the hotel will send the invoice to CRS.</inlineHelpText>
        <label>Invoice Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markup_Invoice_Amount__c</fullName>
        <inlineHelpText>The amount should be displayed on the markup invoice.</inlineHelpText>
        <label>Markup Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Exempt_After_30_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the hotel is tax exempt after 30 days.</inlineHelpText>
        <label>Tax Exempt After 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <inlineHelpText>Hotel&apos;s Tax Rate Percentage.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Insurance_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Housing_Rule__c</columns>
        <columns>Hotel_Rule__c</columns>
        <columns>Hotel_into_Housing_Invoice_Style__c</columns>
        <columns>Hotel_Only_Invoice_Style__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.InsuranceContracts</value>
        </filters>
        <label>Insurance Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>HotelContracts</fullName>
        <active>true</active>
        <description>These are contracts that CRS has negotiated with hotels</description>
        <label>Hotel Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>InsuranceContracts</fullName>
        <active>true</active>
        <description>Negotiated contracts with our National Accounts</description>
        <label>Insurance Contracts</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>